<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_book1"
        android:title="@string/book1_name"/>
    
    <item
        android:id="@+id/menu_book2"
        android:title="@string/book2_name"/>
    
    <item
        android:id="@+id/menu_book3"
        android:title="@string/book3_name"/>
    
    <item
        android:id="@+id/menu_book4"
        android:title="@string/book4_name"/>
    
    <item
        android:id="@+id/menu_book5"
        android:title="@string/book5_name"/>
    
    <item
        android:id="@+id/menu_theme_config"
        android:title="@string/config_theme"/>
    
    <item
        android:id="@+id/menu_fontsize_config"
        android:title="@string/config_fontsize"/>
    <item
        android:id="@+id/menu_feedback"
        android:title="@string/menu_title_feedback"/>

</menu>